Update class name and description to HNUST

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <ul class="nav-links">
                 <li><a href="#about">班级简介</a></li>
                 <li><a href="#news">班级消息</a></li>
-                <li><a href="~members.html">班级成员</a></li>
+                <li><a href="members.html">班级成员</a></li>
                 <li><a href="#contact">联系我们</a></li>
             </ul>
         </div>
@@ -240,7 +240,7 @@
     <div class="container">
         <div class="banner">
             <div class="banner-content">
-                <h1>湖南科技大学 2025级计算机科学与技术11班</h1>
+                <h1>HNUST 2025级计算机科学与技术11班</h1>
                 <p>探索科技未来，创造数字世界</p>
             </div>
         </div>
@@ -250,7 +250,7 @@
     <div class="container">
         <section class="about" id="about">
             <h2 class="section-title">班级简介</h2>
-            <p>湖南科技大学2025级计算机科学与技术11班是一个充满活力与创新精神的集体。班级由30名热爱计算机科学的同学组成，我们怀揣着对技术的热情与追求，共同探索计算机领域的奥秘。</p>
+            <p>HNUST 2025级计算机科学与技术11班是一个充满活力与创新精神的集体。班级由30名热爱计算机科学的同学组成，我们怀揣着对技术的热情与追求，共同探索计算机领域的奥秘。</p>
             <p>我们的专业方向包括软件开发、人工智能、数据科学、网络安全等前沿领域。班级学习氛围浓厚，同学们积极参与各类学科竞赛和项目实践，在ACM程序设计大赛、数学建模、"互联网+"创新创业大赛等活动中屡获佳绩。</p>
             <p>在班主任李老师的带领下，我们不仅注重专业知识的学习，更注重培养团队协作能力和创新思维。班级定期组织技术分享会、项目实践活动和学术讲座，为同学们提供全方位的发展平台。</p>
             <p>我们相信，通过四年的系统学习和实践锻炼，2025级计算机11班的每位同学都将成为IT行业的精英人才，为科技发展和社会进步贡献自己的力量。</p>
